--- a/ninjanode/views/about.html
+++ b/ninjanode/views/about.html
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+    </nav>
     <h1>About Page</h1>
 
     <!--[if lt IE 8]>
