--- a/ninjanode/views/index.html
+++ b/ninjanode/views/index.html
@@ -5,6 +5,10 @@
     <title>Document</title>
   </head>
   <body>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+    </nav>
     <h1>Home Page</h1>
   </body>
 </html>
