--- a/ninjanode/views/about.ejs
+++ b/ninjanode/views/about.ejs
@@ -1,25 +1,11 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>Document | <%= title %></title>
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-    </head>
+    <%- include('./partials/head.ejs') %>
     <body>
-        <nav>
-            <div class="site-title">
-                <a href="/">
-                    <h1>Blog</h1>
-                    <p>A new site</p>
-                </a>
-            </div>
-            <ul>
-                <li><a href="/">Blogs</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href='/blogs/create'>New Blog</a></li>
-            </ul>
-        </nav>
+        <%- include('./partials/nav.ejs') %>
+
         <h1>About</h1>
 
+        <%- include('./partials/footer.ejs') %>
     </body>
 </html>
