--- a/ninjanode/views/create.ejs
+++ b/ninjanode/views/create.ejs
@@ -1,10 +1,8 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>Document <%= title %></title>
-    </head>
+    <%- include('./partials/head.ejs') %>
     <body>
+        <%- include('./partials/nav.ejs') %>
         <div class="create-blog content">
             <form>
                 <label for="title">Blog title:</label>
@@ -16,5 +14,6 @@
                 <button>Submit</button>
             </form>
         </div>
+        <%- include('./partials/footer.ejs') %>
     </body>
 </html>
