--- a/ninjanode/views/create.ejs
+++ b/ninjanode/views/create.ejs
@@ -4,13 +4,13 @@
     <body>
         <%- include('./partials/nav.ejs') %>
         <div class="create-blog content">
-            <form>
+            <form action="/blogs" method="POST">
                 <label for="title">Blog title:</label>
-                <input id="title" type="text" value="" required/>
+                <input name='title' id="title" type="text" value="" required/>
                 <label for="snippet">Blog snippet:</label>
-                <input type="text" id="snippet" required />
+                <input name='snippet' type="text" id="snippet" required />
                 <label for="'body'">Blog body:</label>
-                <textarea id="body" required></textarea>
+                <textarea name='body' id="body" required></textarea>
                 <button>Submit</button>
             </form>
         </div>
