--- a/form-and-data-handling/views/createUser.ejs
+++ b/form-and-data-handling/views/createUser.ejs
@@ -3,16 +3,36 @@
     <head>
         <meta charset="UTF-8"/>
         <title><%= title %></title>
+        <link href="styles.css" rel="stylesheet"/>
     </head>
     <body>
         <h1><%= title %></h1>
         <%- include('partials/errors.ejs') %>
         <form action="/create" method="POST">
-            <label for="firstName">First Name:</label>
-            <input name="firstName" type="text" id="firstName" />
-            <label for="lastName">Last Name:</label>
-            <input name="lastName" type="text" id="lastName"/>
-            <button type="submit">Submit</button>
+            <div>
+                <label for="firstName">First Name:</label>
+                <input name="firstName" type="text" id="firstName" />
+            </div>
+            <div>
+                <label for="lastName">Last Name:</label>
+                <input name="lastName" type="text" id="lastName"/>
+            </div>
+            <div>
+                <label for="email">Email:</label>
+                <input name="email" type="text" id="email"/>
+            </div>
+            <div>
+                <label for="age">Age:</label>
+                <input name="age" type="text" id="age"/>
+            </div>
+            <div>
+                <label for="bio">Bio:</label>
+                <textarea cols="30" id="bio" name="bio" rows="10"></textarea>
+            </div>
+
+            <div>
+                <button type="submit">Submit</button>
+            </div>
         </form>
         <a href="/">Back to Home</a>
     </body>
