--- a/form-and-data-handling/views/updateUser.ejs
+++ b/form-and-data-handling/views/updateUser.ejs
@@ -3,27 +3,58 @@
     <head>
         <meta charset="UTF-8"/>
         <title><%= title %></title>
+        <link href="styles.css" rel="stylesheet"/>
     </head>
     <body>
         <h1><%= title %></h1>
         <%- include('partials/errors.ejs') %>
         <form action="/<%= user.id  %>/update" method="POST">
-            <label for="firstName">First Name:</label>
-            <input
-                name="firstName"
-                type="text"
-                id="firstName"
-                value="<%= user.firstName %>"
-                required
-            />
-            <label for="lastName">Last Name:</label>
-            <input
-                name="lastName"
-                type="text"
-                id="lastName"
-                value="<%= user.lastName %>"
-                required
-            />
+            <div>
+                <label for="firstName">First Name:</label>
+                <input
+                    name="firstName"
+                    type="text"
+                    id="firstName"
+                    value="<%= user.firstName %>"
+                    required
+                />
+            </div>
+            <div>
+                <label for="lastName">Last Name:</label>
+                <input
+                    name="lastName"
+                    type="text"
+                    id="lastName"
+                    value="<%= user.lastName %>"
+                    required
+                />
+            </div>
+            <div>
+                <label for="email">Email:</label>
+                <input
+                    name="email"
+                    type="text"
+                    id="email"
+                    value="<%= user.email %>"
+                />
+            </div>
+            <div>
+                <label for="age">Age:</label>
+                <input
+                    name="age"
+                    type="text"
+                    id="age"
+                    value="<%= user.age %>"
+                />
+            </div>
+            <div>
+                <label for="bio">Bio:</label>
+                <textarea cols="30"
+                          id="bio"
+                          name="bio"
+                          rows="10"
+                ><%= user.bio %></textarea>
+            </div>
             <button type="submit">Submit</button>
         </form>
         <a href="/">Back to Home</a>
